--- a/Flower_shop/flower_shop/apps/users/templates/base.html
+++ b/Flower_shop/flower_shop/apps/users/templates/base.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Мой сайт{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Подключаем Font Awesome для иконок -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        .alert-custom {
+            background-color: #e0f7fa;
+            color: #007bff;
+            width: 50%; /* Сокращаем ширину блока */
+            margin: 0 auto; /* Центрируем блок */
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -30,13 +40,15 @@
     </nav>
 
     <div class="container">
+        <!-- Вывод сообщений -->
         {% if messages %}
-            <div class="alert alert-info">
+            <div class="alert alert-custom">
                 {% for message in messages %}
                     <p>{{ message }}</p>
                 {% endfor %}
             </div>
         {% endif %}
+
         {% block content %}{% endblock %}
     </div>
 
