--- a/Flower_shop/flower_shop/apps/users/templates/users/logged_out.html
+++ b/Flower_shop/flower_shop/apps/users/templates/users/logged_out.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+
 {% block content %}
-    <div class="alert alert-success" role="alert">
-        Вы вышли из системы.
-        <a href="{% url 'login' %}" class="alert-link">Войти снова</a>
-    </div>
+<div class="alert alert-success" role="alert">
+    Вы успешно вышли из системы.
+    <a href="{% url 'login' %}" class="alert-link">Войти снова</a>.
+</div>
 {% endblock %}
