--- a/Flower_shop/flower_shop/apps/users/templates/base.html
+++ b/Flower_shop/flower_shop/apps/users/templates/base.html
@@ -7,18 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Подключаем Font Awesome для иконок -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        .alert-custom {
-            background-color: #e0f7fa;
-            color: #007bff;
-            width: 100%; /* Ширина блока */
-        }
-        .alert-danger-custom {
-            background-color: #f8d7da;
-            color: #721c24;
-            width: 100%; /* Ширина блока */
-        }
-    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -44,39 +32,11 @@
     </nav>
 
     <div class="container">
-        <!-- Вывод сообщений об успешных действиях -->
-        {% if messages %}
-            <div class="alert alert-custom">
-                {% for message in messages %}
-                    <p>{{ message }}</p>
-                {% endfor %}
-            </div>
-        {% endif %}
-
-        <!-- Вывод ошибок формы -->
-        {% if form.errors %}
-            <div class="alert alert-danger-custom">
-                <ul>
-                    {% for field in form %}
-                        {% if field.errors %}
-                            {% for error in field.errors %}
-                                <li><strong>{{ field.label }}:</strong> {{ error }}</li>
-                            {% endfor %}
-                        {% endif %}
-                    {% endfor %}
-
-                    {% if form.non_field_errors %}
-                        {% for error in form.non_field_errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    {% endif %}
-                </ul>
-            </div>
-        {% endif %}
-
         {% block content %}{% endblock %}
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Подключаем иконки FontAwesome для глазика -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </body>
 </html>
