--- a/Flower_shop/flower_shop/apps/users/templates/users/login.html
+++ b/Flower_shop/flower_shop/apps/users/templates/users/login.html
@@ -1,35 +1,24 @@
 {% extends "base.html" %}
+{% block title %}Вход{% endblock %}
 
 {% block content %}
 <div class="container">
     <h2>Вход</h2>
-
-    <!-- Отображение ошибок -->
-    {% if form.errors %}
-        <div class="alert alert-danger">
-            <ul>
-                {% for field in form %}
-                    {% if field.errors %}
-                        {% for error in field.errors %}
-                            <li><strong>{{ field.label }}:</strong> {{ error }}</li>
-                        {% endfor %}
-                    {% endif %}
-                {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
-
-    <!-- Форма входа -->
     <form method="POST" autocomplete="off">
         {% csrf_token %}
 
-        <!-- Поле для ввода логина -->
+        <!-- Логин -->
         <div class="mb-3">
             <label for="id_username" class="form-label">Логин</label>
-            <input type="text" name="username" class="form-control" id="id_username" placeholder="Введите логин" value="{{ form.username.value|default_if_none:'' }}" style="width: 250px; background-color: #e6f7ff;" autocomplete="off">
+            <input type="text" name="username" class="form-control" id="id_username" value="{{ form.username.value|default_if_none:'' }}" placeholder="Введите логин" style="background-color: #e6f7ff; width: 250px;" autocomplete="off">
+            {% if form.username.errors %}
+                <div class="text-danger">
+                    {{ form.username.errors.as_text }}
+                </div>
+            {% endif %}
         </div>
 
-        <!-- Поле для ввода пароля с глазиком -->
+        <!-- Пароль -->
         <div class="mb-3">
             <label for="id_password" class="form-label">Пароль</label>
             <div class="input-group" style="width: 250px;">
@@ -38,6 +27,11 @@
                     <i class="fa fa-eye"></i>
                 </button>
             </div>
+            {% if form.password.errors %}
+                <div class="text-danger">
+                    {{ form.password.errors.as_text }}
+                </div>
+            {% endif %}
         </div>
 
         <button type="submit" class="btn btn-primary">Войти</button>
@@ -50,16 +44,9 @@
     const passwordField = document.getElementById('id_password');
 
     togglePassword.addEventListener('click', function () {
-        if (passwordField.type === 'password') {
-            passwordField.type = 'text';
-            togglePassword.innerHTML = '<i class="fa fa-eye-slash"></i>';
-        } else {
-            passwordField.type = 'password';
-            togglePassword.innerHTML = '<i class="fa fa-eye"></i>';
-        }
+        const type = passwordField.type === 'password' ? 'text' : 'password';
+        passwordField.type = type;
+        this.innerHTML = type === 'password' ? '<i class="fa fa-eye"></i>' : '<i class="fa fa-eye-slash"></i>';
     });
 </script>
-
-<!-- Подключение иконок FontAwesome для глазика -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 {% endblock %}
