--- a/Flower_shop/flower_shop/apps/users/templates/users/register.html
+++ b/Flower_shop/flower_shop/apps/users/templates/users/register.html
@@ -8,13 +8,12 @@
         <!-- Логин -->
         <div class="mb-3">
             <label for="id_username" class="form-label">Логин</label>
-            <input type="text" name="username" class="form-control" id="id_username"
-                   placeholder="Введите логин"
-                   value="{{ form.username.value|default_if_none:'' }}"
-                   style="width: 250px; background-color: #e6f7ff;" autocomplete="off">
+            <input type="text" name="username" class="form-control" id="id_username" placeholder="Введите логин" value="{{ form.username.value|default_if_none:'' }}" style="width: 250px; background-color: #e6f7ff;" autocomplete="off">
             {% if form.username.errors %}
                 <div class="text-danger">
-                    {{ form.username.errors.as_text }}
+                    {% for error in form.username.errors %}
+                        <p class="mb-0">* {{ error }}</p>
+                    {% endfor %}
                 </div>
             {% endif %}
         </div>
@@ -23,17 +22,16 @@
         <div class="mb-3">
             <label for="id_password1" class="form-label">Пароль</label>
             <div class="input-group" style="width: 250px;">
-                <input type="password" name="password1" class="form-control" id="id_password1"
-                       placeholder="Введите пароль"
-                       value="{{ form.password1.value|default_if_none:'' }}"
-                       style="background-color: #e6f7ff;" autocomplete="new-password">
+                <input type="password" name="password1" class="form-control" id="id_password1" placeholder="Введите пароль" style="background-color: #e6f7ff;" autocomplete="off">
                 <button type="button" class="btn btn-outline-secondary" id="togglePassword1">
                     <i class="fa fa-eye"></i>
                 </button>
             </div>
             {% if form.password1.errors %}
                 <div class="text-danger">
-                    {{ form.password1.errors.as_text }}
+                    {% for error in form.password1.errors %}
+                        <p class="mb-0">* {{ error }}</p>
+                    {% endfor %}
                 </div>
             {% endif %}
         </div>
@@ -42,17 +40,16 @@
         <div class="mb-3">
             <label for="id_password2" class="form-label">Повторите пароль</label>
             <div class="input-group" style="width: 250px;">
-                <input type="password" name="password2" class="form-control" id="id_password2"
-                       placeholder="Повторите пароль"
-                       value="{{ form.password2.value|default_if_none:'' }}"
-                       style="background-color: #e6f7ff;" autocomplete="new-password">
+                <input type="password" name="password2" class="form-control" id="id_password2" placeholder="Повторите пароль" style="background-color: #e6f7ff;" autocomplete="off">
                 <button type="button" class="btn btn-outline-secondary" id="togglePassword2">
                     <i class="fa fa-eye"></i>
                 </button>
             </div>
             {% if form.password2.errors %}
                 <div class="text-danger">
-                    {{ form.password2.errors.as_text }}
+                    {% for error in form.password2.errors %}
+                        <p class="mb-0">* {{ error }}</p>
+                    {% endfor %}
                 </div>
             {% endif %}
         </div>
@@ -88,4 +85,7 @@
         }
     });
 </script>
+
+<!-- Подключаем иконки FontAwesome для глазиков -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 {% endblock %}
